suitecrm-new-deployment/setup-suitecrm-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: d1f241-dev
  name: cbsuitecrm
  labels:
    app: cbsuitecrm
    deployment: cbsuitecrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cbsuitecrm
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cbsuitecrm
        deployment: cbsuitecrm
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      volumes:
        - name: shared-uploads
          persistentVolumeClaim:
            claimName: cbsuitecrm-uploads-shared
      containers:
          - name: bcgovsuitecrm
            image: >-
              image-registry.openshift-image-registry.svc:5000/d1f241-tools/bcgovsuitecrm:latest
            ports:
              - containerPort: 8181
                protocol: TCP
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
            imagePullPolicy: IfNotPresent
            volumeMounts:
              - name: shared-uploads
                mountPath: /suitecrm/public/legacy/upload
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
